fix to select not showing qty on firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -184,7 +184,7 @@ footer {
 }
 
 .select-item select {
-  width: 50px;
+  width: 60px;
   display: inline-block;
 }
 
